--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "mysql2": "^3.11.3",
